更新配置文件解析逻辑

--- a/flabplatform/flabdet/configs/models/yolos/default.yaml
+++ b/flabplatform/flabdet/configs/models/yolos/default.yaml
@@ -3,6 +3,8 @@ mode: train # (str) YOLO mode, i.e. train, val, predict, export, track, benchmar
 
 # Train settings -------------------------------------------------------------------------------------------------------
 model: # (str, optional) path to model file, i.e. yolov8n.pt, yolov8n.yaml
+modelDir: # (str, optional) path to model directory, i.e. yolov8n
+baseModelDir: # (str, optional) path to base model directory, i.e. yolov8n
 data: # (str, optional) path to data file, i.e. coco8.yaml
 epochs: 100 # (int) number of epochs to train for
 time: # (float, optional) number of hours to train for, overrides epochs if supplied
