新增mask2former的基础模块

--- a/flabplatform/flabdet/configs/_base_/default_runtime.yaml
+++ b/flabplatform/flabdet/configs/_base_/default_runtime.yaml
@@ -1,4 +1,42 @@
 default_scope: 'flabplatform.flabdet'
 
+default_hooks:
+    timer:
+      type: 'IterTimerHook'
+    logger: 
+      type: 'LoggerHook'
+      interval: 50
+    param_scheduler: 
+      type: 'ParamSchedulerHook'
+    checkpoint: 
+      type: 'CheckpointHook'
+      interval: 1
+    sampler_seed: 
+      type: 'DistSamplerSeedHook'
+    visualization: 
+      type: 'DetVisualizationHook'
+
+env_cfg:
+  cudnn_benchmark: false
+  mp_cfg:
+    mp_start_method: 'fork'
+    opencv_num_threads: 0
+  dist_cfg:
+    backend: 'nccl'
+
+
+visualizer:
+  type: 'DetLocalVisualizer'
+  name: 'visualizer'
+  vis_backends: 
+    - type: 'LocalVisBackend'
+
+log_processor:
+  type: 'LogProcessor'
+  window_size: 50
+  by_epoch: true
+
+log_level: 'INFO'
+
 load_from: null
 resume: false
