更新上采样模块

--- a/configs/co_dino/co_dino.yaml
+++ b/configs/co_dino/co_dino.yaml
@@ -3,10 +3,8 @@ _base_: [
 ]
 
 
-model: &_model
-    type: 'DABDETR'
-
 training:
     algoParams: 
         device: 0
-        model: *_model
+        model: 
+          type: 'CoDETR'
