--- a/configs/co_dino/co_dino_r50.yaml
+++ b/configs/co_dino/co_dino_r50.yaml
@@ -11,10 +11,10 @@ custom_imports:
 # loss_lambda: &_loss_lambda 2.0
 num_classes: &_num_classes 80
 
-image_size: [1024, 1024]
+image_size: &_image_size !!python/tuple [256, 256]
 batch_augments: &_batch_augments
   - type: 'BatchFixedSizePad'
-    size: [1024, 1024]
+    size: *_image_size
     pad_mask: false
 
 model:
@@ -283,44 +283,48 @@ model:
         iou_threshold: 0.6
       max_per_img: 100
 
-train_pipeline: &_train_pipeline
+load_pipeline:
   - type: 'LoadImageFromFile'
-    backend_args: {{_base_.backend_args}}
   - type: 'LoadAnnotations'
     with_bbox: true
+    with_mask: false
+  - type: 'RandomResize'
+    scale: *_image_size
+    ratio_range: !!python/tuple [0.1, 2.0]
+    keep_ratio: true
+  - type: 'RandomCrop'
+    crop_type: 'absolute_range'
+    crop_size: *_image_size
+    recompute_bbox: true
+    allow_negative_crop: true
+  - type: 'FilterAnnotations'
+    min_gt_bbox_wh: !!python/tuple [1.0e-2, 1.0e-2]
   - type: 'RandomFlip'
     prob: 0.5
-  - type: 'RandomChoice'
-    transforms:
-      - - type: 'Resize'
-          scale: [1024, 1024]
-          keep_ratio: true
-  - type: "PackDetInputs"
+  - type: 'Pad'
+    size: *_image_size
+    pad_val:
+      img: !!python/tuple [114, 114, 114]
 
-train_dataloader:
-  dataset:
-    pipeline: *_train_pipeline
-    filter_cfg:
-      filter_empty_gt: false
-      min_size: 0
 
 test_pipeline: &_test_pipeline
   - type: 'LoadImageFromFile'
-    backend_args: {{_base_.backend_args}}
+  - type: 'Resize'
+    scale: *_image_size
+    keep_ratio: true
+  - type: 'Pad'
+    size: *_image_size
+    pad_val:
+      img: !!python/tuple [114, 114, 114]
   - type: 'LoadAnnotations'
     with_bbox: true
-  - type: 'RandomChoice'
-    transforms:
-      - - type: 'Resize'
-          scale: [1024, 1024]
-          keep_ratio: true
+    with_mask: false
   - type: 'PackDetInputs'
+    meta_keys: ['img_id', 'img_path', 'ori_shape', 'img_shape', 'scale_factor']
+
 
 val_dataloader: &_val_dataloader
   dataset:
-    filter_cfg:
-      filter_empty_gt: false
-      min_size: 0
     pipeline: *_test_pipeline
 
 test_dataloader: *_val_dataloader
@@ -329,7 +333,7 @@ optim_wrapper:
   type: 'OptimWrapper'
   optimizer:
     type: 'AdamW'
-    lr: 0.0001
+    lr: 0.0002
     weight_decay: 0.0001
   clip_grad:
     max_norm: 0.1
@@ -338,23 +342,22 @@ optim_wrapper:
     custom_keys:
       backbone:
         lr_mult: 0.1
-        decay_mult: 1.0
+
+val_evaluator: &_val_evaluator
+  metric: 'bbox'
+test_evaluator: *_val_evaluator
 
 max_epochs: &_max_epochs 10
 train_cfg:
   type: 'EpochBasedTrainLoop'
   max_epochs: *_max_epochs
   val_interval: 1
+
 val_cfg:
   type: 'ValLoop'
 test_cfg:
   type: 'TestLoop'
 
-default_hooks:
-  checkpoint:
-    type: 'CheckpointHook'
-    interval: 1
-    max_keep_ckpts: 2
 
 param_scheduler:
   - type: 'MultiStepLR'
@@ -369,3 +372,6 @@ param_scheduler:
 # base_batch_size = (8 GPUs) x (2 samples per GPU)
 auto_scale_lr:
   base_batch_size: 4
+
+log_processor:
+  by_epoch: true
