--- a/flabplatform/flabdet/configs/models/yolos/default.yaml
+++ b/flabplatform/flabdet/configs/models/yolos/default.yaml
@@ -11,7 +11,7 @@ time: # (float, optional) number of hours to train for, overrides epochs if supp
 patience: 20 # (int) epochs to wait for no observable improvement for early stopping of training
 batch: 16 # (int) number of images per batch (-1 for AutoBatch)
 imgsz: 640 # (int | list) input images size as int for train and val modes, or list[h,w] for predict and export modes
-save: False # (bool) save train checkpoints and predict results
+save: True # (bool) save train checkpoints and predict results
 save_period: 5 # (int) Save checkpoint every x epochs (disabled if < 1)
 cache: False # (bool) True/ram, disk or False. Use cache for data loading
 device: 0 # (int | str | list, optional) device to run on, i.e. cuda device=0 or device=0,1,2,3 or device=cpu
